--- a/bower.json
+++ b/bower.json
@@ -14,5 +14,10 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "jquery": "^3.1.1",
+    "gsap": "^1.19.1",
+    "underscore": "^1.8.3"
+  }
 }
